spacing fixed

--- a/public/assets/css/modules/bt-sticky-aside.css
+++ b/public/assets/css/modules/bt-sticky-aside.css
@@ -2,6 +2,7 @@ aside {
     position: -webkit-sticky;
     position: sticky;
     top: 10vh;
+    margin-bottom: var(--bt-spacing);
     box-shadow: var(--bt-main-box-shadow);
 }
 
